fix alignment, add transition

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap');
 
 :root {
     --txt:rgb(0, 0, 0);
@@ -18,6 +19,18 @@
     --border-color: var(--accent-color);
 
     transition: 1s ease-in-out;
+}
+
+.comic-relief-regular {
+  font-family: "Comic Relief", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.comic-relief-bold {
+  font-family: "Comic Relief", system-ui;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .inconsolata {
@@ -346,6 +359,8 @@ body {
 }
 
 .game-selection-window {
+    display: flex;
+
     position: absolute;
     top: 15%;
     left: 20%;
@@ -362,3 +377,49 @@ body {
 
     transition: 1s ease-in-out;
 }
+
+/* Snake */
+.snake-game {
+    position: absolute;
+    top: 5%;
+    left: 7%;
+
+    width: 20%;
+    height: 40%;
+    border-radius: 0.4vw;
+
+    text-align: center;
+    text-decoration: none;
+
+    background-color: rgb(255, 255, 255, 0.15);
+    outline: 0.2vw solid var(--border-color);
+    box-shadow: 0.7vw 0.7vw 0px 0px var(--border-color);
+
+    transition: 0.2s ease-in-out;
+}
+
+.snake-game:hover {
+    transform: translate(0.2vw, 0.2vw);
+    box-shadow: 0.5vw 0.5vw 0px 0px var(--border-color);
+}
+
+.snake-game:active {
+    transform: translate(0.7vw, 0.7vw);
+    box-shadow: none;
+}
+
+.snake-img {
+    width: 90%;
+    height: 75%;
+}
+
+.snake-title {
+    font-family: "Comic Relief";
+
+    color: black;
+
+    font-size: 2.5vw;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
